(Global Fix) Fix bugs

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
   </body>
 </html>
